--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -5,3 +5,19 @@
 html {
   font-size: 14px;
 }
+
+.text-area-simple {
+  @apply shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md;
+}
+
+.button-sm {
+  @apply inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+}
+
+.button-sm-white {
+  @apply inline-flex items-center px-3 py-2 border border-gray-300 shadow-sm text-sm leading-4 font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+}
+
+.input-sm {
+  @apply shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block text-sm border-gray-300 rounded-md;
+}
