fix: increase max query size  from 256KB to 1MB

--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -9,3 +9,7 @@ html {
 .p-toolbar-group-left, .p-toolbar-group-right {
   @apply gap-x-2;
 }
+
+.p-toast-detail {
+  @apply line-clamp-6 overflow-hidden max-w-sm w-full break-words;
+}
