--- a/dashboard/app/src/primeicons.css
+++ b/dashboard/app/src/primeicons.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'primeicons';
     font-display: block;
-    src: url('../primeicons.woff2') format('woff2');
+    src: url('primeicons.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
