--- a/dashboard/shared/src/primevue-theme/menubar.css
+++ b/dashboard/shared/src/primevue-theme/menubar.css
@@ -1,6 +1,6 @@
 /* With centered search and secondary links */
 
-/* as TailwindUI Dropdown */
+/* as TailwindUI Dropdown - https://tailwindui.com/components/application-ui/elements/dropdowns */
 .p-menubar .p-menuitem-link {
   @apply text-gray-900 px-4 py-2 text-sm select-none focus:outline-none;
 }
