--- a/dashboard/app/src/primevue.css
+++ b/dashboard/app/src/primevue.css
@@ -111,7 +111,9 @@ button {
 .p-connected-overlay {
   opacity: 0;
   transform: scaleY(0.8);
-  transition: transform 0.12s cubic-bezier(0, 0, 0.2, 1), opacity 0.12s cubic-bezier(0, 0, 0.2, 1);
+  transition:
+    transform 0.12s cubic-bezier(0, 0, 0.2, 1),
+    opacity 0.12s cubic-bezier(0, 0, 0.2, 1);
 }
 
 .p-connected-overlay-visible {
@@ -136,7 +138,9 @@ button {
 }
 
 .p-connected-overlay-enter-active {
-  transition: transform 0.12s cubic-bezier(0, 0, 0.2, 1), opacity 0.12s cubic-bezier(0, 0, 0.2, 1);
+  transition:
+    transform 0.12s cubic-bezier(0, 0, 0.2, 1),
+    opacity 0.12s cubic-bezier(0, 0, 0.2, 1);
 }
 
 .p-connected-overlay-leave-active {
