Remove `border-right` applied to `.buttonset` buttons on hover

--- a/dashboard/new-dashboard/src/primevue-theme/button.css
+++ b/dashboard/new-dashboard/src/primevue-theme/button.css
@@ -22,3 +22,8 @@
 .p-button-text {
   @apply border-transparent bg-transparent;
 }
+
+/* Without this style, buttons in a button set have a `border-right` on hover.  */
+.p-buttonset .p-button:not(:last-child):hover {
+    border-right: 0 none;
+}
