(chore) Update deps

--- a/dashboard/app/prime-theme/theme-base/_components.scss
+++ b/dashboard/app/prime-theme/theme-base/_components.scss
@@ -22,7 +22,7 @@
   //@import './components/input/_password';
   //@import './components/input/_radiobutton';
   //@import './components/input/_rating';
-  //@import './components/input/_selectbutton';
+  @import './components/input/_selectbutton';
   @import './components/input/_slider';
   // jb - our theme fully covers tabmenu (except chipts, maybe added by request)
   //@import './components/input/_treeselect';
