--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -1,6 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
 
 /*
 PrimeVue is designed for 14px, but TailwindUI and TailwindCss assume default 16 px.
