--- a/dashboard/app/prime-theme/theme-base/_components.scss
+++ b/dashboard/app/prime-theme/theme-base/_components.scss
@@ -47,7 +47,7 @@
   @import './components/data/_treetable';
 
   //Panel
-  //@import './components/panel/_accordion';
+  @import './components/panel/_accordion';
   //@import './components/panel/_card';
   //@import './components/panel/_fieldset';
   // jb - our theme fully covers divider
@@ -95,7 +95,7 @@
   //@import './components/misc/_avatar';
   //@import './components/misc/_badge';
   //@import './components/misc/_blockui';
-  //@import './components/misc/_chip';
+  @import './components/misc/_chip';
   //@import './components/misc/_inplace';
   //@import './components/misc/_progressbar';
   //@import './components/misc/_progressspinner';
