Page for reporting events from slack message

--- a/dashboard/app/prime-theme/theme-base/_components.scss
+++ b/dashboard/app/prime-theme/theme-base/_components.scss
@@ -48,7 +48,7 @@
 
   //Panel
   @import './components/panel/_accordion';
-  //@import './components/panel/_card';
+  @import './components/panel/_card';
   //@import './components/panel/_fieldset';
   // jb - our theme fully covers divider
   //@import './components/panel/_divider';
