--- a/dashboard/app/prime-theme/theme-base/components/input/_checkbox.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_checkbox.scss
@@ -1,86 +1,113 @@
 .p-checkbox {
+  width: $checkboxWidth;
+  height: $checkboxHeight;
+
+  .p-checkbox-input {
+    appearance: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    z-index: 1;
+    outline: 0 none;
+    border: $checkboxBorder;
+    border-radius: $borderRadius;
+  }
+
+  .p-checkbox-box {
+    border: $checkboxBorder;
+    background: $inputBg;
     width: $checkboxWidth;
     height: $checkboxHeight;
+    color: $textColor;
+    border-radius: $borderRadius;
+    transition: $formElementTransition;
+    outline-color: transparent;
 
+    .p-checkbox-icon {
+      transition-duration: $transitionDuration;
+      color: $checkboxIconActiveColor;
+      font-size: $checkboxIconFontSize;
+
+      &.p-icon {
+        width: $checkboxIconFontSize;
+        height: $checkboxIconFontSize;
+      }
+    }
+  }
+
+  &.p-highlight {
     .p-checkbox-box {
-        border: $checkboxBorder;
-        background: $inputBg;
-        width: $checkboxWidth;
-        height: $checkboxHeight;
-        color: $textColor;
-        border-radius: $borderRadius;
-        transition: $formElementTransition;
-
-        .p-checkbox-icon {
-            transition-duration: $transitionDuration;
-            color: $checkboxIconActiveColor;
-            font-size: $checkboxIconFontSize;
-
-            &.p-icon {
-                width: $checkboxIconFontSize;
-                height: $checkboxIconFontSize;
-            }
-        }
-
-        &.p-highlight {
-            border-color: $checkboxActiveBorderColor;
-            background: $checkboxActiveBg;
-        }
+      border-color: $checkboxActiveBorderColor;
+      background: $checkboxActiveBg;
     }
+  }
 
-    &:not(.p-checkbox-disabled) {
+  &:not(.p-disabled) {
+    &:has(.p-checkbox-input:hover) {
+      .p-checkbox-box {
+        border-color: $inputHoverBorderColor;
+      }
+
+      &.p-highlight {
         .p-checkbox-box {
-            &:hover {
-                border-color: $inputHoverBorderColor;
-            }
-
-            &.p-focus {
-                @include focused-input();
-            }
-
-            &.p-highlight:hover {    
-                border-color: $checkboxActiveHoverBorderColor;
-                background: $checkboxActiveHoverBg;
-                color: $checkboxIconActiveHoverColor;
-            }
+          border-color: $checkboxActiveHoverBorderColor;
+          background: $checkboxActiveHoverBg;
+          color: $checkboxIconActiveHoverColor;
         }
+      }
     }
 
-    &.p-invalid > .p-checkbox-box {
-        @include invalid-input();
+    &:has(.p-checkbox-input:focus-visible) {
+      .p-checkbox-box {
+        @include focused-input();
+      }
     }
+  }
+
+  &.p-invalid > .p-checkbox-box {
+    @include invalid-input();
+  }
 }
 
 .p-input-filled {
-    .p-checkbox {
-        .p-checkbox-box {
-            background-color: $inputFilledBg;
-
-            &.p-highlight {
-                background: $checkboxActiveBg;
-            }
-        }
-
-        &:not(.p-checkbox-disabled) {
-            .p-checkbox-box {
-                &:hover {
-                    background-color: $inputFilledHoverBg;
-                }
-        
-                &.p-highlight:hover {    
-                    background: $checkboxActiveHoverBg;
-                }
-            }
-        }
+  .p-checkbox {
+    .p-checkbox-box {
+      background-color: $inputFilledBg;
     }
+
+    &.p-highlight {
+      .p-checkbox-box {
+        background: $checkboxActiveBg;
+      }
+    }
+
+    &:not(.p-disabled) {
+      &:has(.p-checkbox-input:hover) {
+        .p-checkbox-box {
+          background-color: $inputFilledHoverBg;
+        }
+
+        &.p-highlight {
+          .p-checkbox-box {
+            background: $checkboxActiveHoverBg;
+          }
+        }
+      }
+    }
+  }
 }
 
 @if ($highlightBg == $checkboxActiveBg) {
-    .p-highlight {
-        .p-checkbox {
-            .p-checkbox-box {
-                border-color: $checkboxIconActiveColor;
-            }
-        }
+  .p-highlight {
+    .p-checkbox {
+      .p-checkbox-box {
+        border-color: $checkboxIconActiveColor;
+      }
     }
+  }
 } 
