--- a/dashboard/app/prime-theme/theme-base/components/button/_speeddial.scss
+++ b/dashboard/app/prime-theme/theme-base/components/button/_speeddial.scss
@@ -31,6 +31,8 @@
     height: $speedDialActionHeight;
     background: $speedDialActionBg;
     color: $speedDialActionTextColor;
+    outline-color: transparent;
+    transition: $actionIconTransition;
 
     &:hover {
         background: $speedDialActionHoverBg;
