--- a/dashboard/app/prime-theme/theme-base/components/data/_filter.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_filter.scss
@@ -13,6 +13,7 @@
     background: $actionIconBg;
     border-radius: $actionIconBorderRadius;
     transition: $actionIconTransition;
+    outline-color: transparent;
 
     &:hover {
         color: $actionIconHoverColor;
@@ -46,6 +47,7 @@
     background: $actionIconBg;
     border-radius: $actionIconBorderRadius;
     transition: $actionIconTransition;
+    outline-color: transparent;
 
     &:hover {
         color: $actionIconHoverColor;
@@ -77,6 +79,14 @@
             background: $inputListItemBg;
             transition: $listItemTransition;
             border-radius: $inputListItemBorderRadius;
+
+            &:first-child {
+                margin-top: 0;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
 
             &.p-highlight {
                 color: $highlightTextColor;
