--- a/dashboard/app/prime-theme/theme-base/components/data/_organizationchart.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_organizationchart.scss
@@ -42,6 +42,7 @@
         background: inherit;
         color: inherit;
         border-radius: 50%;
+        outline-color: transparent;
 
         &:focus-visible {
             @include focused();
