--- a/dashboard/app/prime-theme/theme-base/components/menu/_breadcrumb.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_breadcrumb.scss
@@ -9,6 +9,7 @@
             .p-menuitem-link {
                 transition: $listItemTransition;
                 border-radius: $borderRadius;
+                outline-color: transparent;
 
                 &:focus-visible {
                     @include focused();
