--- a/dashboard/app/prime-theme/theme-base/components/menu/_contextmenu.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_contextmenu.scss
@@ -5,7 +5,7 @@
     border: $overlayMenuBorder;
     box-shadow: $overlayMenuShadow;
     border-radius: $borderRadius;
-    width: $menuWidth;
+    min-width: $menuWidth;
 
     .p-contextmenu-root-list {
         outline: 0 none;
@@ -16,6 +16,7 @@
         background: $overlayMenuBg;
         border: $overlayMenuBorder;
         box-shadow: $overlayMenuShadow;
+        border-radius: $borderRadius;
         border-radius: $borderRadius;
     }
 
