--- a/dashboard/app/prime-theme/theme-base/components/menu/_panelmenu.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_panelmenu.scss
@@ -8,6 +8,7 @@
             background: $accordionHeaderBg;
             border-radius: $borderRadius;
             transition: $listItemTransition;
+            outline-color: transparent;
 
             .p-panelmenu-header-action {
                 color: $accordionHeaderTextColor;
