--- a/dashboard/app/prime-theme/theme-base/components/menu/_steps.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_steps.scss
@@ -7,6 +7,7 @@
             transition: $listItemTransition;
             border-radius: $borderRadius;
             background: $stepsItemBg;
+            outline-color: transparent;
 
             .p-steps-number {
                 color: $stepsItemNumberColor;
