--- a/dashboard/app/prime-theme/theme-base/components/misc/_chip.scss
+++ b/dashboard/app/prime-theme/theme-base/components/misc/_chip.scss
@@ -27,6 +27,7 @@
         margin-left: $inlineSpacing;
         border-radius: $borderRadius;
         transition: $actionIconTransition;
+        outline-color: transparent;
         
         &:focus-visible {
             @include focused();
