--- a/dashboard/app/prime-theme/theme-base/components/multimedia/_galleria.scss
+++ b/dashboard/app/prime-theme/theme-base/components/multimedia/_galleria.scss
@@ -139,6 +139,8 @@
         }
 
         .p-galleria-thumbnail-item-content {
+            outline-color: transparent;
+            
             &:focus-visible {
                 @include focused();
             }
