--- a/dashboard/app/prime-theme/theme-base/components/overlay/_overlaypanel.scss
+++ b/dashboard/app/prime-theme/theme-base/components/overlay/_overlaypanel.scss
@@ -6,7 +6,7 @@
     //border: $overlayContentBorder;
     //border-radius: $borderRadius;
     //box-shadow: $overlayContainerShadow;
-
+    //
     //.p-overlaypanel-content {
     //    padding: $panelContentPadding;
     //}
