--- a/dashboard/app/prime-theme/theme-base/components/panel/_accordion.scss
+++ b/dashboard/app/prime-theme/theme-base/components/panel/_accordion.scss
@@ -8,6 +8,7 @@
             font-weight: $accordionHeaderFontWeight;
             border-radius: $borderRadius;
             transition: $listItemTransition;
+            outline-color: transparent;
 
             .p-accordion-toggle-icon {
                 margin-right: $inlineSpacing;
