--- a/dashboard/app/prime-theme/theme-base/components/panel/_fieldset.scss
+++ b/dashboard/app/prime-theme/theme-base/components/panel/_fieldset.scss
@@ -23,6 +23,7 @@
                 color: $panelHeaderTextColor;
                 border-radius: $borderRadius;
                 transition: $listItemTransition;
+                outline-color: transparent;
 
                 .p-fieldset-toggler {
                     margin-right: $inlineSpacing;
