--- a/dashboard/app/prime-theme/theme-base/components/panel/_scrollpanel.scss
+++ b/dashboard/app/prime-theme/theme-base/components/panel/_scrollpanel.scss
@@ -3,6 +3,7 @@
         background: $scrollPanelTrackBg;
         border: $scrollPanelTrackBorder;
         transition: $formElementTransition;
+        outline-color: transparent;
 
         &:focus-visible {
             @include focused();
