--- a/dashboard/app/prime-theme/theme-base/components/data/_orderlist.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_orderlist.scss
@@ -7,25 +7,32 @@
         }
     }
 
+    .p-orderlist-list-container {
+        background: $panelContentBg;
+        border: $panelContentBorder;
+        border-radius: $borderRadius;
+        transition: $formElementTransition;
+        outline-color: transparent;
+
+        &.p-focus {
+            @include focused-input();
+        }
+    }
+
     .p-orderlist-header {
-        background: $panelHeaderBg;
         color: $panelHeaderTextColor;
-        border: $panelHeaderBorder;
         padding: $panelHeaderPadding;
         font-weight: $panelHeaderFontWeight;
-        border-bottom: 0 none;
-        border-top-right-radius: $borderRadius;
-        border-top-left-radius: $borderRadius;
     }
 
     .p-orderlist-list {
-        border: $panelContentBorder;
-        background: $panelContentBg;
         color: $panelContentTextColor;
         padding: $inputListPadding;
-        border-bottom-right-radius: $borderRadius;
-        border-bottom-left-radius: $borderRadius;
         outline: 0 none;
+        
+        &:not(:first-child) {
+            border-top: $panelContentBorder;
+        }
 
         .p-orderlist-item {
             padding: $inputListItemPadding;
@@ -35,14 +42,27 @@
             background: $inputListItemBg;
             transition: transform $transitionDuration, $listItemTransition;
 
+            &:first-child {
+                margin-top: 0;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
             &:not(.p-highlight):hover {
                 background: $inputListItemHoverBg;
                 color: $inputListItemTextHoverColor;
+
+                &.p-focus {
+                    color: $inputListItemTextHoverColor;
+                    background: $inputListItemHoverBg;
+                }
             }
 
             &.p-focus {
-                color: $inputListItemTextFocusColor;
-                background: $inputListItemFocusBg;
+                color: $inputListItemTextHoverColor;
+                background: $inputListItemHoverBg;
             }
 
             &.p-highlight {
