--- a/dashboard/app/prime-theme/theme-base/components/data/_treetable.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_treetable.scss
@@ -104,7 +104,7 @@
                     & + .p-checkbox {
                         margin-right: $inlineSpacing;
                         
-                        .p-indeterminate {
+                        &.p-indeterminate {
                             .p-checkbox-icon {
                                 color: $textColor;
                             }
