--- a/dashboard/app/prime-theme/theme-base/components/input/_autocomplete.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_autocomplete.scss
@@ -1,8 +1,8 @@
-@use 'sass:math';
+@use "sass:math";
 
 .p-autocomplete {
     .p-autocomplete-loader {
-        right: nth($inputPadding, 2); 
+        right: nth($inputPadding, 2);
     }
 
     &.p-autocomplete-dd {
@@ -26,10 +26,11 @@
     .p-autocomplete-multiple-container {
         padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
         gap: $inlineSpacing;
+        outline-color: transparent;
 
         .p-autocomplete-input-token {
             padding: math.div(nth($inputPadding, 1), 2) 0;
-            
+
             input {
                 font-family: var(--font-family);
                 font-feature-settings: var(--font-feature-settings, normal);
@@ -81,6 +82,14 @@
             transition: $listItemTransition;
             border-radius: $inputListItemBorderRadius;
 
+            &:first-child {
+                margin-top: 0;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
             &.p-highlight {
                 color: $highlightTextColor;
                 background: $highlightBg;
@@ -92,11 +101,6 @@
 
             &:not(.p-highlight):not(.p-disabled) {
                 &.p-focus {
-                    color: $inputListItemTextFocusColor;
-                    background: $inputListItemFocusBg;
-                }
-
-                &:hover {
                     color: $inputListItemTextHoverColor;
                     background: $inputListItemHoverBg;
                 }
