--- a/dashboard/app/prime-theme/theme-base/components/input/_chips.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_chips.scss
@@ -15,6 +15,7 @@
 
     .p-chips-multiple-container {
         padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
+        outline-color: transparent;
 
         .p-chips-token {
             padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
