--- a/dashboard/app/prime-theme/theme-base/components/input/_radiobutton.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_radiobutton.scss
@@ -2,6 +2,22 @@
     width: $radiobuttonWidth;
     height: $radiobuttonHeight;
 
+    .p-radiobutton-input {
+        appearance: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        opacity: 0;
+        z-index: 1;
+        outline: 0 none;
+        border: $radiobuttonBorder;
+        border-radius: 50%;
+    }
+
     .p-radiobutton-box {
         border: $radiobuttonBorder;
         background: $inputBg;
@@ -10,14 +26,7 @@
         color: $textColor;
         border-radius: 50%;
         transition: $formElementTransition;
-
-        &:not(.p-disabled):not(.p-highlight):hover {
-            border-color: $inputHoverBorderColor;
-        }
-
-        &:not(.p-disabled).p-focus {
-            @include focused-input();
-        }
+        outline-color: transparent;
 
         .p-radiobutton-icon {
             width: $radiobuttonIconSize;
@@ -25,25 +34,42 @@
             transition-duration: $transitionDuration;
             background-color: $radiobuttonIconActiveColor;
         }
+    }
 
-        &.p-highlight {
+    &.p-highlight {
+        .p-radiobutton-box {
             border-color: $radiobuttonActiveBorderColor;
             background: $radiobuttonActiveBg;
+        }
+    }
 
-            &:not(.p-disabled):hover {
-                border-color: $radiobuttonActiveHoverBorderColor;
-                background: $radiobuttonActiveHoverBg;
-                color: $radiobuttonIconActiveHoverColor;
+    &:not(.p-disabled) {
+        &:has(.p-radiobutton-input:hover) {
+            .p-radiobutton-box {
+                border-color: $inputHoverBorderColor;
+            }
+
+            &.p-highlight {
+                .p-radiobutton-box {
+                    border-color: $radiobuttonActiveHoverBorderColor;
+                    background: $radiobuttonActiveHoverBg;
+                    
+                    .p-radiobutton-icon {
+                        background-color: $radiobuttonIconActiveHoverColor;
+                    }
+                }
+            }
+        }
+
+        &:has(.p-radiobutton-input:focus-visible) {
+            .p-radiobutton-box {
+                @include focused-input();
             }
         }
     }
-    
+
     &.p-invalid > .p-radiobutton-box {
         @include invalid-input();
-    }
-
-    &:focus {
-        outline: 0 none;
     }
 }
 
@@ -51,16 +77,24 @@
     .p-radiobutton {
         .p-radiobutton-box {
             background-color: $inputFilledBg;
+        }
 
-            &:not(.p-disabled):hover {
-                background-color: $inputFilledHoverBg;
-            }
-
-            &.p-highlight {
+        &.p-highlight {
+            .p-radiobutton-box {
                 background: $radiobuttonActiveBg;
+            }
+        }
+
+        &:not(.p-disabled) {
+            &:has(.p-radiobutton-input:hover) {
+                .p-radiobutton-box {
+                    background-color: $inputFilledHoverBg;
+                }
     
-                &:not(.p-disabled):hover {
-                    background: $radiobuttonActiveHoverBg;
+                &.p-highlight {
+                    .p-radiobutton-box {
+                        background: $radiobuttonActiveHoverBg;
+                    }
                 }
             }
         }
