--- a/dashboard/app/prime-theme/theme-base/components/input/_slider.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_slider.scss
@@ -30,14 +30,16 @@
         border: $sliderHandleBorder;
         border-radius: $sliderHandleBorderRadius;
         transition: $formElementTransition;
+        outline-color: transparent;
 
-        &:focus {
+        &:focus-visible {
             @include focused();
         }
     }
 
     .p-slider-range {
         background: $sliderRangeBg;
+        border-radius: $borderRadius;
     }
 
     &:not(.p-disabled) {
