--- a/dashboard/app/prime-theme/theme-base/components/menu/_menubar.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_menubar.scss
@@ -1,112 +1,114 @@
 .p-menubar {
-  padding: $horizontalMenuPadding;
-  background: $horizontalMenuBg;
-  color: $horizontalMenuTextColor;
-  border: $horizontalMenuBorder;
-  border-radius: $borderRadius;
-
-  .p-menubar-root-list {
-    outline: 0 none;
-
-    > .p-menuitem {
-      @include horizontal-rootmenuitem();
-    }
-  }
-
-  .p-menuitem {
-    @include menuitem();
-  }
-
-  .p-submenu-list {
-    padding: $verticalMenuPadding;
-    background: $overlayMenuBg;
-    border: $overlayMenuBorder;
-    box-shadow: $overlayMenuShadow;
-    width: $menuWidth;
-
-    .p-menuitem-separator {
-      border-top: $divider;
-      margin: $menuSeparatorMargin;
-    }
-
-    .p-submenu-icon {
-      font-size: $menuitemSubmenuIconFontSize;
-    }
-  }
-
-  &.p-menubar-mobile {
-    .p-menubar-button {
-      width: $actionIconWidth;
-      height: $actionIconHeight;
-      color: $horizontalMenuRootMenuitemIconColor;
-      border-radius: $actionIconBorderRadius;
-      transition: $actionIconTransition;
-
-      &:hover {
-        color: $horizontalMenuRootMenuitemIconHoverColor;
-        background: $horizontalMenuRootMenuitemHoverBg;
-      }
-
-      &:focus {
-        @include focused();
-      }
-    }
+    padding: $horizontalMenuPadding;
+    background: $horizontalMenuBg;
+    color: $horizontalMenuTextColor;
+    border: $horizontalMenuBorder;
+    border-radius: $borderRadius;
 
     .p-menubar-root-list {
-      padding: $verticalMenuPadding;
-      background: $overlayMenuBg;
-      border: $overlayMenuBorder;
-      box-shadow: $overlayMenuShadow;
+        outline: 0 none;
 
-      .p-menuitem-separator {
-        border-top: $divider;
-        margin: $menuSeparatorMargin;
-      }
-
-      .p-submenu-icon {
-        font-size: $menuitemSubmenuIconFontSize;
-      }
-
-      .p-menuitem {
-        .p-menuitem-content {
-          .p-menuitem-link {
-            .p-submenu-icon {
-              margin-left: auto;
-              transition: transform $transitionDuration;
-            }
-          }
+        > .p-menuitem {
+            @include horizontal-rootmenuitem();
         }
-
-
-        &.p-menuitem-active {
-          > .p-menuitem-content {
-            > .p-menuitem-link {
-              > .p-submenu-icon {
-                transform: rotate(-180deg);
-              }
-            }
-          }
-        }
-      }
-
-      .p-submenu-list {
-        .p-submenu-icon {
-          transition: transform $transitionDuration;
-          transform: rotate(90deg);
-        }
-
-        .p-menuitem-active {
-          > .p-menuitem-content {
-            > .p-menuitem-link {
-              > .p-submenu-icon {
-                transform: rotate(-90deg);
-              }
-            }
-          }
-        }
-      }
-
-      @include nested-submenu-indents(nth($menuitemPadding, 1), 2, 10);
     }
-  }
+
+    .p-menuitem {
+        @include menuitem();
+    }
+
+    .p-submenu-list {
+        padding: $verticalMenuPadding;
+        background: $overlayMenuBg;
+        border: $overlayMenuBorder;
+        box-shadow: $overlayMenuShadow;
+        min-width: $menuWidth;
+        border-radius: $borderRadius;
+
+        .p-menuitem-separator {
+            border-top: $divider;
+            margin: $menuSeparatorMargin;
+        }
+
+        .p-submenu-icon {
+            font-size: $menuitemSubmenuIconFontSize;
+        }
+    }
+
+    &.p-menubar-mobile {
+        .p-menubar-button {
+            width: $actionIconWidth;
+            height: $actionIconHeight;
+            color: $horizontalMenuRootMenuitemIconColor;
+            border-radius: $actionIconBorderRadius;
+            transition: $actionIconTransition;
+            outline-color: transparent;
+        
+            &:hover {
+                color: $horizontalMenuRootMenuitemIconHoverColor;
+                background: $horizontalMenuRootMenuitemHoverBg;
+            }
+        
+            &:focus {
+                @include focused();
+            }
+        }
+
+        .p-menubar-root-list {
+            padding: $verticalMenuPadding;
+            background: $overlayMenuBg;
+            border: $overlayMenuBorder;
+            box-shadow: $overlayMenuShadow;
+    
+            .p-menuitem-separator {
+                border-top: $divider;
+                margin: $menuSeparatorMargin;
+            }
+    
+            .p-submenu-icon {
+                font-size: $menuitemSubmenuIconFontSize;
+            }
+
+            .p-menuitem {
+                .p-menuitem-content {
+                    .p-menuitem-link {
+                        .p-submenu-icon {
+                            margin-left: auto;
+                            transition: transform $transitionDuration;
+                        }
+                    }
+                }
+
+
+                &.p-menuitem-active {
+                    > .p-menuitem-content {
+                        > .p-menuitem-link {
+                            > .p-submenu-icon {
+                                transform: rotate(-180deg);
+                            }
+                        }
+                    }
+                }
+            }
+
+            .p-submenu-list {
+                .p-submenu-icon {
+                    transition: transform $transitionDuration;
+                    transform: rotate(90deg);
+                }
+
+                .p-menuitem-active {
+                    > .p-menuitem-content {
+                        > .p-menuitem-link {
+                            > .p-submenu-icon {
+                                transform: rotate(-90deg);
+                            }
+                        }
+                    }
+                }
+            }
+    
+            @include nested-submenu-indents(nth($menuitemPadding, 1), 2, 10);
+        }
+    }
 }
