--- a/dashboard/app/prime-theme/theme-base/components/messages/_toast.scss
+++ b/dashboard/app/prime-theme/theme-base/components/messages/_toast.scss
@@ -38,6 +38,7 @@
             border-radius: $actionIconBorderRadius;
             background: transparent;
             transition: $actionIconTransition;
+            outline-color: transparent;
 
             &:hover {
                 background: rgba(255,255,255,.5);
