--- a/dashboard/app/prime-theme/theme-base/components/overlay/_dialog.scss
+++ b/dashboard/app/prime-theme/theme-base/components/overlay/_dialog.scss
@@ -38,18 +38,15 @@
     }
 
     .p-dialog-footer {
-        border-top:  $dialogFooterBorder;
+        border-top: $dialogFooterBorder;
         background: $overlayContentBg;
         color: $panelFooterTextColor;
         padding: $dialogFooterPadding;
-        text-align: right;
+        display: flex;
+        justify-content: end;
+        gap: $inlineSpacing;
         border-bottom-right-radius: $borderRadius;
         border-bottom-left-radius: $borderRadius;
-
-        button {
-            margin: 0 $inlineSpacing 0 0;
-            width: auto;
-        }
     }
 
     &.p-confirm-dialog {
